raw/helloworld--2016-11-09-12-29-18--3.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./helloworld
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling helloworld v0.1.0 (file:///root/benchmarks/helloworld)
time: 0.000; rss: 41MB	parsing
Lines of code:             3
Pre-expansion node count:  8
time: 0.000; rss: 41MB	recursion limit
time: 0.000; rss: 41MB	crate injection
time: 0.000; rss: 41MB	plugin loading
time: 0.000; rss: 41MB	plugin registration
time: 0.015; rss: 62MB	expansion
time: 0.000; rss: 62MB	maybe building test harness
time: 0.000; rss: 62MB	maybe creating a macro crate
Post-expansion node count: 68
time: 0.000; rss: 62MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 62MB	complete gated feature checking
time: 0.000; rss: 62MB	early lint checks
time: 0.000; rss: 62MB	AST validation
time: 0.002; rss: 62MB	name resolution
time: 0.000; rss: 62MB	lowering ast -> hir
time: 0.000; rss: 66MB	indexing hir
time: 0.000; rss: 66MB	attribute checking
time: 0.000; rss: 66MB	language item collection
time: 0.000; rss: 66MB	lifetime resolution
time: 0.000; rss: 66MB	looking for entry point
time: 0.000; rss: 66MB	looking for plugin registrar
time: 0.000; rss: 66MB	region resolution
time: 0.000; rss: 66MB	loop checking
time: 0.000; rss: 66MB	static item recursion checking
time: 0.000; rss: 66MB	compute_incremental_hashes_map
time: 0.000; rss: 66MB	load_dep_graph
time: 0.000; rss: 66MB	type collecting
time: 0.000; rss: 66MB	variance inference
time: 0.004; rss: 70MB	coherence checking
time: 0.000; rss: 70MB	wf checking
time: 0.000; rss: 70MB	item-types checking
time: 0.000; rss: 70MB	item-bodies checking
time: 0.000; rss: 70MB	drop-impl checking
time: 0.000; rss: 70MB	const checking
time: 0.000; rss: 70MB	privacy checking
time: 0.000; rss: 70MB	stability index
time: 0.000; rss: 70MB	intrinsic checking
time: 0.000; rss: 70MB	effect checking
time: 0.000; rss: 70MB	match checking
time: 0.000; rss: 70MB	liveness checking
time: 0.000; rss: 70MB	rvalue checking
time: 0.000; rss: 70MB	MIR dump
  time: 0.000; rss: 70MB	SimplifyCfg
  time: 0.000; rss: 70MB	QualifyAndPromoteConstants
  time: 0.000; rss: 70MB	TypeckMir
  time: 0.000; rss: 70MB	SimplifyBranches
  time: 0.000; rss: 70MB	SimplifyCfg
time: 0.000; rss: 70MB	MIR cleanup and validation
time: 0.000; rss: 70MB	borrow checking
time: 0.000; rss: 70MB	reachability checking
time: 0.000; rss: 70MB	death checking
time: 0.000; rss: 70MB	stability checking
time: 0.000; rss: 70MB	unused lib feature checking
time: 0.000; rss: 70MB	lint checking
time: 0.001; rss: 70MB	resolving dependency formats
  time: 0.000; rss: 70MB	NoLandingPads
  time: 0.000; rss: 70MB	SimplifyCfg
  time: 0.000; rss: 70MB	EraseRegions
  time: 0.000; rss: 70MB	AddCallGuards
  time: 0.000; rss: 70MB	ElaborateDrops
  time: 0.000; rss: 70MB	NoLandingPads
  time: 0.000; rss: 70MB	SimplifyCfg
  time: 0.000; rss: 70MB	InstCombine
  time: 0.000; rss: 70MB	Deaggregator
  time: 0.000; rss: 70MB	CopyPropagation
  time: 0.000; rss: 70MB	SimplifyLocals
  time: 0.000; rss: 70MB	AddCallGuards
  time: 0.000; rss: 70MB	PreTrans
time: 0.000; rss: 70MB	MIR optimisations
  time: 0.000; rss: 70MB	write metadata
  time: 0.000; rss: 70MB	translation item collection
  time: 0.000; rss: 70MB	codegen unit partitioning
  time: 0.000; rss: 70MB	internalize symbols
time: 0.005; rss: 70MB	translation
time: 0.000; rss: 70MB	assert dep graph
time: 0.000; rss: 70MB	serialize dep graph
  time: 0.000; rss: 70MB	llvm function passes [0]
  time: 0.000; rss: 70MB	llvm module passes [0]
  time: 0.002; rss: 74MB	codegen passes [0]
  time: 0.000; rss: 74MB	codegen passes [0]
time: 0.003; rss: 74MB	LLVM passes
time: 0.000; rss: 74MB	serialize work products
  time: 0.071; rss: 74MB	running linker
time: 0.072; rss: 74MB	linking
done
